--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
 	<title>Test Angular.js</title>
 	
-	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.17/angular.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 </head>
 <body>
-	
+	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.17/angular.min.js"></script>	
+	<script src="js/app.js"></script>	
 </body>
 </html>
