--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="store">
 <head>
 	<title>Test Angular.js</title>
 	
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 </head>
 <body>
-	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.17/angular.min.js"></script>	
-	<script src="js/app.js"></script>	
+	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.17/angular.min.js"></script>	
+	<script src="js/app.js"></script>
+	
+	<p>I am {{4+6}}</p>
 </body>
 </html>
