--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="store">
+<html ng-app="gemStore">
 <head>
 	<title>Test Angular.js</title>
 	
@@ -9,6 +9,6 @@
 	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.17/angular.min.js"></script>	
 	<script src="js/app.js"></script>
 	
-	<p>I am {{4+6}}</p>
+	<p>{{"Hello, Angular!"}}</p>
 </body>
 </html>
