--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 </head>
 <body>
+	<div ng-controller="StoreController as store">
+		<h1>{{store.product.name}}</h1>
+		<h2>${{store.product.price}}</h2>
+		<p>{{store.product.description}}</p>
+	</div>
+	
 	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.17/angular.min.js"></script>	
 	<script src="js/app.js"></script>
-	
-	<p>{{"Hello, Angular!"}}</p>
 </body>
 </html>
