--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
-<html ng-app="gemStore">
+<html ng-app="store">
 <head>
 	<title>Test Angular.js</title>
 	
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 </head>
-<body>
-	<div ng-controller="StoreController as store">
-		<h1>{{store.product.name}}</h1>
-		<h2>${{store.product.price}}</h2>
-		<p>{{store.product.description}}</p>
+<body ng-controller="StoreController as store">
+	<div ng-repeat="product in store.products">
+		<h1>{{product.name}}</h1>
+		<h2>${{product.price}}</h2>
+		<p>{{product.description}}</p>
+		<button ng-show="product.canPurchase">Add to Cart</button>
 	</div>
 	
 	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.17/angular.min.js"></script>	
