--- a/index.html
+++ b/index.html
@@ -11,10 +11,18 @@
 			<h3>
 				{{product.name}}
 				<em class="pull-right">{{product.price | currency}}</em>
-				<img ng-src="{{product.images[0].full}}">
+				<img ng-src="{{product.images[0]}}">
 			</h3>
 		</li>
 	</ul>
+	
+	<section>
+		<ul class="nav nav-pills">
+			<li><a href>Description</a></li>
+			<li><a href>Specifications</a></li>
+			<li><a href>Reviews</a></li>
+		</ul>
+	</section>
 	
 	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.17/angular.min.js"></script>	
 	<script src="js/app.js"></script>
